PRJ_VER=1.0.3
SUMMARY=
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=
[Changes]
- after_release_commit depends rpm_changelog_prev_update if RPM supported enabled.
- Corrected the 'FORCE' of cmake CACHE
- Update the error messages when cmake-fedora is not installed.
- Fixed target: zanata_push_trans
